[gd_scene load_steps=2 format=3 uid="uid://gee534b6ftex"]

[ext_resource type="Script" path="res://scripts/score_ui.gd" id="1_ib78y"]

[node name="SCORE_UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 576.0
offset_top = 324.0
offset_right = -576.0
offset_bottom = -324.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 8
script = ExtResource("1_ib78y")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
offset_left = -583.0
offset_top = -333.0
offset_right = 579.0
offset_bottom = 331.0
color = Color(0.545098, 0.670588, 0.560784, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = -519.0
offset_top = -270.0
offset_right = -387.0
offset_bottom = -244.0
text = "YOU'VE SCORED: "

[node name="SaveButton" type="Button" parent="Label"]
layout_mode = 0
offset_left = 1.0
offset_top = 87.0
offset_right = 239.0
offset_bottom = 118.0
text = "SAVE SCORE TO SCOREBOARD"

[node name="GameManagerScoreLabel" type="Label" parent="Label"]
layout_mode = 0
offset_left = 132.0
offset_right = 224.0
offset_bottom = 31.0

[node name="NameLabel" type="Label" parent="."]
layout_mode = 0
offset_left = -518.0
offset_top = -234.0
offset_right = -422.0
offset_bottom = -208.0
text = "Your Name: "

[node name="NameInput" type="LineEdit" parent="NameLabel"]
layout_mode = 0
offset_left = 96.0
offset_right = 223.0
offset_bottom = 31.0
placeholder_text = "name"

[node name="BoxContainer" type="BoxContainer" parent="."]
layout_mode = 0
offset_left = -109.0
offset_top = -215.0
offset_right = 451.0
offset_bottom = 213.0
vertical = true

[node name="ScoreboardLabel" type="Label" parent="BoxContainer"]
layout_mode = 2
text = "Scoreboard"
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = -525.0
offset_top = 283.0
offset_right = -397.0
offset_bottom = 314.0
text = "BACK TO START"

[connection signal="button_up" from="Label/SaveButton" to="." method="_on_button_button_up"]
[connection signal="button_up" from="BackButton" to="." method="_on_back_button_button_up"]
